--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>A Simple Calculator</title>
   </head>
   <body>
-    <h1>A Simple Calcilator</h1>
+    <h1>A Simple Calculator</h1>
     <button class="clear" id="clear">Reset</button>
     <div class="maincontainer">
       <div class="container1">
